# paste4ever

./: .gitignore  LICENSE  README.md
apps/api/: .env.example  Cargo.toml
apps/api/src/: main.rs
apps/web/: .env.example  .gitignore  next.config.ts  open-next.config.ts  package-lock.json  package.json  wrangler.jsonc
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/paste/: route.ts
apps/web/src/app/api/paste/[id]/: route.ts
apps/web/src/app/api/paste/status/[jobId]/: route.ts
apps/web/src/app/api/recent/: route.ts
apps/web/src/app/p/[id]/: page.tsx
apps/web/src/lib/: api.ts  store.ts
scripts/: start-antd.local.ps1.example  start-antd.ps1  watchdog.ps1
